# src/api/models/ChatCompletion.ts
@@ -1,8 +1,0 @@
-/* istanbul ignore file */
-/* tslint:disable */
-/* eslint-disable */
-
-export type ChatCompletion = {
-    message: string;
-};
-
