# src/api/models/ChatCompletionOutput.ts
@@ -1,8 +1,0 @@
-/* istanbul ignore file */
-/* tslint:disable */
-/* eslint-disable */
-
-export type ChatCompletionOutput = {
-    output_message: string;
-};
-
